--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "scripts": {
-    "dev": "nodemon index",
-    "start": "node index"
+    "start": "node index",
+    "server": "nodemon index",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently 'npm run server' 'npm run client'"
   },
   "dependencies": {
+    "concurrently": "^9.1.0",
     "cookie-session": "^2.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
